# OSCRE

./: .gitignore  CMakeLists.txt  ClassDescriptions.md  LibraryStructure.md  README.md  RLCCircuit.sch  basic_test.sch  untitled-1.sch  untitled-2.sch  untitled-3.sch  untitled-4.sch  untitled-5.sch  untitled-6.sch  untitled-7.sch  untitled.sch  xschemrc
Documentation/: InstallGaw.md  InstallXschem.md  NewProcess.md
Examples/: basic_opamp.sch  inverter.sch  sram.sch
Install Scripts/: install.sh  install_gaw.sh  install_xschem.sh  uninstall.sh  uninstall_all.sh
Research Logs/: Jacobs IMMERSE Research Log.numbers  README.md
Research Paper/: Radiation Hardening Academic Paper - Old.tex  Radiation Hardening Academic Paper.aux  Radiation Hardening Academic Paper.bbl  Radiation Hardening Academic Paper.blg  Radiation Hardening Academic Paper.dvi  Radiation Hardening Academic Paper.out  Radiation Hardening Academic Paper.tex  Radiation Hardening Academic Paper_old2.tex  references.bib
image_gen/: Inverter_Sim.raw  image_gen.ipynb
include/: rlc.sch
install_scripts/: install.sh  install_skywater_pdks.sh  uninstall.sh  uninstall_skywater_pdks.sh
latchup/: RING_OSC_TEST.sch  advanced_test.sch  basic.sch  basic_model.sch  basic_model.sym  common_emitter.sch  complex.sch  intermed_test.sch  intermediate.sch  op_amp_test.sch  op_amp_test_complex.sch  op_amp_test_intermed.sch  ring_osc_test_intermed.sch
rad_modeling/: adaptive_double_exp.sym  double_exp_current.sym  dual_double_exp.sym  nmos_tid.sym  rad_modeling_blocks.spice  rail_span_collapse_voltage_source.sym
(+68 files in other folders)
